--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   get: ^4.6.5
   firebase_core: ^2.4.0
   cloud_firestore: ^4.2.0
+  email_validator: ^2.1.17
+  firebase_auth: ^4.2.1
 
 dev_dependencies:
   flutter_test:
